--- a/public/index.html
+++ b/public/index.html
@@ -8,29 +8,29 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>pooja | Portfolio</title>
+  <title>DreamViewer Infotech</title>
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="pooja | Portfolio">
+  <meta itemprop="name" content="DreamViewer Infotech">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/poojakittu/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/DreamViewer Infotech/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://poojakittucel.app">
+  <meta property="og:url" content="https://DreamViewer Infotech.app">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="pooja | Portfolio">
+  <meta property="og:title" content="DreamViewer Infotech">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/poojakittu/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/DreamViewer Infotech/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="pooja | Portfolio">
+  <meta name="twitter:title" content="DreamViewer Infotech">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/poojakittu/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/pDreamViewer Infotech/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 </head>
 
 <body>
